test/testdata/classes/methods/static/duplicate_params_error.lox
// error: duplicate parameter x
// error: duplicate parameter y
class Foo {
  static bar(x, y, z, x, y) {}
}
